syntax = "proto3";

package manager;

service ManagerService {
  /// Server registration
  rpc RegisterServer(RegisterServerRequest) returns (RegisterServerResponse);
  
  /// Client partition map query
  rpc GetPartitionMap(GetPartitionMapRequest) returns (GetPartitionMapResponse);
}

message RegisterServerRequest {
  string server_address = 1;
}

message PartitionInfo {
  string table_name = 1;
  string server_address = 2;
  uint64 start_key = 3;
  uint64 end_key = 4;
}

message RegisterServerResponse {
  repeated PartitionInfo assigned_partitions = 1;
  bool has_err = 2;
}

message GetPartitionMapRequest {
}

message GetPartitionMapResponse {
  repeated PartitionInfo partitions = 1;
  bool has_err = 2;
}